--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,9 +4,46 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Demo Application</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<h1>Demo Application</h1>
+<main>
+    <div class="px-4 py-5 my-5 text-center">
+        <h1>Serve Beer</h1>
+        <h1 class="display-5 fw-bold" id="name"></h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4" id="description"></p>
+            <p class="justify-content-sm-center" id="country"></p>
+            <p class="justify-content-sm-center" id="brewery"></p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                <button type="button" class="btn btn-primary btn-lg px-4 gap-3" onclick="loadBeer()">Serve another beer</button>
+            </div>
+        </div>
+    </div>
+</main>
 
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script>
+    function loadBeer() {
+        const Http = new XMLHttpRequest();
+        const url='/api/beer';
+        Http.open("GET", url);
+        Http.send();
+
+        Http.onreadystatechange = (e) => {
+            console.log(Http.responseText)
+            const res = JSON.parse(Http.responseText)
+            document.getElementById('name').innerText = res.name;
+            document.getElementById('country').innerText = res.country;
+            document.getElementById('brewery').innerText = res['name_breweries'];
+            document.getElementById('description').innerText = res.descript;
+        }
+    }
+
+    loadBeer();
+</script>
 </body>
 </html>
