--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,11 @@
     <title>Demo Application</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!--<style>
-
+    <style>
         body {
-            background-color: deepskyblue;
+            background-color: lightsalmon;
         }
-    </style>-->
+    </style>
 </head>
 <body>
 <main>
